tests/NormalTests/paczka2/big_fuzzy/86512528.err
Error in line 3: Gotu6EI3A A573 8,4
Error in line 7: GtC S798 75,5
Error in line 9: GtC A365 17,0
Error in line 15: 3D0 A573 23,2
Error in line 24: K4cj2zuhq A970 72,4
Error in line 45: mfPlnvm S798 9,3
Error in line 46: mfPlnvm A573 29,5
Error in line 48: pxV A365 19,6
Error in line 65: K4cj2zuhq A365 53,1
Error in line 67: K4cj2zuhq A970 70,4
Error in line 69: K4cj2zuhq A365 69,0
Error in line 68: A970 A970 9,7
Error in line 73: Gotu6EI3A A970 28,1
Error in line 72: A970 A365 29,5
Error in line 81: Gotu6EI3A A573 139,90
Error in line 77: Gotu6EI3A A573 45,0
Error in line 89: K4cj2zuhq A970 397,0
Error in line 92: 3D0 A970 24,3
Error in line 99: mfPlnvm A970 78,3
Error in line 90: pxV A573 4,6
Error in line 112: Gotu6EI3A A573 76,0
Error in line 129: A970 A573 60,7
Error in line 146: mfPlnvm S798 49,5
Error in line 126: 3D0 S798 1,5
Error in line 153: 3D0 A970 94,7
Error in line 161: pxV A573 49,6
Error in line 168: mfPlnvm A365 71,6
Error in line 178: mfPlnvm A970 26,88
Error in line 192: K4cj2zuhq A970 339,6
Error in line 212: GtC a365 18,8
Error in line 187: mfPlnvm A970 117,7
Error in line 215: pxV A970 44,7
Error in line 220: 3D0 A970 1%,4
Error in line 219: K4cj2zuhq A573 85,2
Error in line 227: 3D0 A970 47,2
Error in line 234: GtC A365 52,1
Error in line 246: mfPlnvm A970 76,3
